fix drop-down position

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         </article>
 
     </main>
-
+    
+<!-- todo - insert the arrows as SVG -->
     <nav class="pagination container flex space-between">
         <div class="nav-direction flex"><img src="img/arrow_left.png">Previous</div>
         <div class="nav-direction flex">Next<img src="img/arrow_right.png"></div>
